apps/backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
